--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "recipes-app-test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://pa-volpin.github.io/app-receitas/",
+  "homepage": "https://pa-volpin.github.io/app-receitas",
   "dependencies": {
     "@sheerun/mutationobserver-shim": "^0.3.3",
     "@testing-library/jest-dom": "^4.2.4",
